PR2475: Filter filenames against the decl_file

We used to only check that a CU contains at least one srcfile matching
the user's file spec.  This patch ensures that the selected function was
actually defined in one of the matching srcfiles.

* tapsets.cxx (struct dwarf_query): Make filtered_srcfiles carry
  strings, so we can easily lookup matches later.
  (query_dwarf_func): Check that the decl_file is in filtered_srcfiles.
  (query_cu): Adjust to using set<string>.
* dwflpp.cxx (dwflpp::collect_srcfiles_matching): Take a set<string>.